crates/wac-parser/tests/resolution/fail/duplicate-func-result.wac
type f = func() -> (a: u32, a: s8);